fixed scrollbar issue..

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+body{
+	overflow-y: scroll;
+}
 ul {
 	list-style-type: none;
 	padding-left: 0px;
